# schemarefly

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DIALECT_GUIDE.md  LICENSE-APACHE  LICENSE-MIT  Logs.md  README.md  ROADMAP-WAREHOUSE-DRIFT.md  Real_dbt_compatibility.md  STABILITY.md  SchemaRefly Engineering Doc.md  USE-CASES.md  WAREHOUSE_ADAPTER_GUIDE.md  report.json  report.md  schemarefly.toml  v1_extended.md  worked-debug.md
.github/workflows/: ci.yml  release.yml  vscode-extension.yml
crates/schemarefly-catalog/: Cargo.toml
crates/schemarefly-catalog/src/: adapter.rs  bigquery.rs  lib.rs  mock.rs  postgres.rs  snowflake.rs
crates/schemarefly-catalog/tests/: integration_tests.rs
crates/schemarefly-catalog/tests/fixtures/: mod.rs
crates/schemarefly-cli/: Cargo.toml
crates/schemarefly-cli/src/: main.rs
crates/schemarefly-compat/: Cargo.toml  README.md
crates/schemarefly-compat/examples/: run_compat_suite.rs
crates/schemarefly-compat/src/: harness.rs  lib.rs  metrics.rs  model_detection.rs  report.rs
crates/schemarefly-core/: Cargo.toml
crates/schemarefly-core/src/: config.rs  diagnostic.rs  lib.rs  report.rs  schema.rs
crates/schemarefly-dbt/: Cargo.toml
crates/schemarefly-dbt/src/: contract.rs  dag.rs  lib.rs  manifest.rs
crates/schemarefly-engine/: Cargo.toml
crates/schemarefly-engine/src/: contract_diff.rs  drift_detector.rs  lib.rs  state_comparison.rs
crates/schemarefly-incremental/: Cargo.toml
crates/schemarefly-incremental/benches/: incremental_benchmarks.rs
crates/schemarefly-incremental/src/: cache.rs  db.rs  lib.rs  queries.rs
crates/schemarefly-incremental/tests/: integration_tests.rs
crates/schemarefly-jinja/: Cargo.toml  README.md
crates/schemarefly-jinja/src/: context.rs  functions.rs  lib.rs  preprocessor.rs
crates/schemarefly-lsp/: Cargo.toml
crates/schemarefly-lsp/src/: backend.rs  lib.rs  main.rs
crates/schemarefly-sql/: Cargo.toml
crates/schemarefly-sql/src/: dbt_functions.rs  inference.rs  lib.rs  parser.rs  resolver.rs
crates/schemarefly-sql/tests/: integration_tests.rs
editors/vscode/: .eslintrc.json  .vscodeignore  DEVELOPMENT.md  README.md  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
examples/drift-detection/: README.md  schemarefly.toml.example
fixtures/: README.md
fixtures/mini-dbt-project/: dbt_project.yml  report.json  report.md
fixtures/mini-dbt-project/models/: active_users.sql  schema.yml  users.sql
script/: test_jinja_debug.sh
test-projects/: COMPREHENSIVE_TEST_REPORT.md  README.md  run_comprehensive_tests.sh
