[workspace]
resolver = "2"
members = [
    "crates/schemarefly-core",
    "crates/schemarefly-dbt",
    "crates/schemarefly-sql",
    "crates/schemarefly-jinja",
    "crates/schemarefly-catalog",
    "crates/schemarefly-engine",
    "crates/schemarefly-incremental",
    "crates/schemarefly-cli",
    "crates/schemarefly-lsp",
    "crates/schemarefly-compat",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mohammad Tanzil Idrisi"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
sha2 = "0.10"
hex = "0.4"

# SQL parsing
sqlparser = "0.53"

# Incremental engine
salsa = "0.25"

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"

# Config parsing
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"

# Testing
pretty_assertions = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

# File system utilities
walkdir = "2.4"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Jinja template engine
minijinja = "2.5"

# Warehouse SDKs (optional)
gcp-bigquery-client = "0.27"

# Internal workspace crates
schemarefly-core = { path = "crates/schemarefly-core" }
schemarefly-dbt = { path = "crates/schemarefly-dbt" }
schemarefly-sql = { path = "crates/schemarefly-sql" }
schemarefly-jinja = { path = "crates/schemarefly-jinja" }
schemarefly-catalog = { path = "crates/schemarefly-catalog" }
schemarefly-engine = { path = "crates/schemarefly-engine" }
schemarefly-incremental = { path = "crates/schemarefly-incremental" }
