[package]
name = "schemarefly-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
schemarefly-core.workspace = true
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

# BigQuery SDK (optional feature)
gcp-bigquery-client = { workspace = true, optional = true }

[features]
default = []
bigquery = ["gcp-bigquery-client"]
snowflake = []
postgres = []
all-warehouses = ["bigquery", "snowflake", "postgres"]
