[package]
name = "schemarefly-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
schemarefly-core.workspace = true
async-trait = "0.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true

# BigQuery SDK (optional feature)
gcp-bigquery-client = { workspace = true, optional = true }

# Snowflake SDK (optional feature)
snowflake-api = { workspace = true, optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }

[features]
default = []
bigquery = ["gcp-bigquery-client"]
snowflake = ["snowflake-api", "arrow-array", "arrow-schema"]
postgres = []
all-warehouses = ["bigquery", "snowflake", "postgres"]
