[package]
name = "schemarefly-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "schemarefly"
path = "src/main.rs"

[dependencies]
schemarefly-core.workspace = true
schemarefly-dbt.workspace = true
schemarefly-engine = { path = "../schemarefly-engine" }
schemarefly-sql = { path = "../schemarefly-sql" }
schemarefly-catalog = { path = "../schemarefly-catalog" }
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
