[package]
name = "schemarefly-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
regex.workspace = true
sha2.workspace = true
hex.workspace = true
chrono = { version = "0.4", features = ["serde"] }
