[package]
name = "schemarefly-jinja"
version.workspace = true
edition.workspace = true

[dependencies]
schemarefly-core = { path = "../schemarefly-core" }
schemarefly-dbt = { path = "../schemarefly-dbt" }
minijinja = "2.5"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
