[package]
name = "schemarefly-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "schemarefly-lsp"
path = "src/main.rs"

[dependencies]
# Internal workspace crates
schemarefly-core.workspace = true
schemarefly-dbt.workspace = true
schemarefly-sql.workspace = true
schemarefly-engine.workspace = true
schemarefly-incremental.workspace = true

# LSP framework
tower-lsp.workspace = true
lsp-types.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
